# mini-langchain

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md
docs/: tool-macro.md
examples/: agent_ollama.rs  ollama_chat.rs
mini-langchain-macros/: Cargo.toml
mini-langchain-macros/src/: lib.rs
src/: agent.rs  config.rs  error.rs  lib.rs  llm.rs  message.rs  tools.rs
src/agent/: error.rs  traits.rs  types.rs
src/llm/: error.rs  ollama.rs  openai.rs  tokens.rs  traits.rs
src/tools/: builtin.rs  error.rs  macros.rs  schema.rs  stream.rs  traits.rs
