[package]
name = "mini-langchain"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "Minimal Rust LangChain implementation for text-only interactions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/mini-langchain"
keywords = ["langchain", "llm", "ai", "agent", "tool-calling"]
categories = ["development-tools", "api-bindings"]

[features]
full = []

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 错误处理
thiserror = "1"
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
