[package]
name = "mini-langchain-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
proc-macro-crate = "1.2"

[dev-dependencies]
trybuild = "1.0"
